--- a/assets/templates/tpl/src/scss/styles.scss
+++ b/assets/templates/tpl/src/scss/styles.scss
@@ -125,6 +125,7 @@
       text-align: justify;
       padding-top: 3rem;
       margin-top: 1rem;
+      text-transform: initial;
 
       div {
         text-align: center;
